# GameServer

./: .gitignore  GEMINI.md  GameServer.slnx  Work_Summary.md  [2026-03-01]_Summary.md  [2026-03-02]_Summary.md  [2026-03-04]_Summary.md  [2026-03-07]_Summary.md  [2026-2-28]_Summary.md  build_log.txt
Backend/Game.DBServer/: Game.DBServer.csproj  Program.cs
Backend/Game.DBServer/Network/: Listener.cs  Server.cs  Session.cs
Backend/Game.Data/: Game.Data.csproj  GameDbContext.cs  GameDbContextFactory.cs
Backend/Game.Data/Entities/: Character.cs  CharacterAppearance.cs  ItemInstances.cs  User.cs
Backend/Game.Data/Migrations/: 20251127202549_InitialCreate.Designer.cs  20251127202549_InitialCreate.cs  20251127210915_AddItemInstances.Designer.cs  20251127210915_AddItemInstances.cs  20251128090610_AlertCharacterAppearanceTable.Designer.cs  20251128090610_AlertCharacterAppearanceTable.cs  GameDbContextModelSnapshot.cs
Backend/Game.WebAPI/: APIResponse.cs  Game.WebAPI.csproj  Program.cs  appsettings.json
Backend/Game.WebAPI/Controllers/: AuthController.cs  CharactersController.cs
Backend/Game.WebAPI/Properties/: launchSettings.json
Server/: CMakeLists.txt  vcpkg.json
Server/DummyClient/: CMakeLists.txt  main.cpp
Server/DummyServer/: CMakeLists.txt  main.cpp  pch.h
Server/GameServer/: CMakeLists.txt  Config.json  GameServer.vcxproj  GameServer.vcxproj.filters  GameSession.cpp  GameSession.h  config.ini  main.cpp  pch.h
Server/GameServer/Contents/: Component.h  Field.cpp  Field.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
Server/GameServer/Detour/Include/: DetourAlloc.h  DetourCommon.h  DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h  DetourNode.h  DetourStatus.h
Server/GameServer/Detour/Source/: DetourAlloc.cpp  DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
Server/GameServer/Packet/: ServerPacketHandler.cpp  ServerPacketHandler.h
Server/GameServer/Proto/: Protocol.pb.cc  Protocol.pb.h  Protocol.proto  Struct.pb.h
Server/GameServer/Util/: NavMeshLoader.cpp  NavMeshLoader.h  Vector3.h
Server/GameServer/Util/Config/: Config.cpp  Config.h
Server/PacketGenerator/: ClientPacketGen.bat  PacketGen.bat  PacketGenerator.py  ProtoParser.py  ServerPacketHandler.h
Server/PacketGenerator/Templates/: PacketHandler.h
Server/ServerCore/: Architecture.md  CMakeLists.txt  Connector.cpp  Connector.h  CoreGlobal.cpp  CoreGlobal.h  CorePch.h  CoreTLS.h  DoubleJobQueue.cpp  DoubleJobQueue.h  IOCPObject.h  IOCPServer.cpp  IOCPServer.h  IPacket.cpp  IocpCore.cpp  IocpCore.h  IocpEvent.h  Job.cpp  Job.h  JobManager.cpp  JobManager.h  JobQueue.cpp  JobQueue.h  Listener.cpp  Listener.h  LockQueue.h  NetAddress.cpp  NetAddress.h  Packet.h  RecvBuffer.cpp  RecvBuffer.h  ReservedJob.cpp  ReservedJob.h  SendBuffer.cpp  SendBuffer.h  ServerCore.vcxproj  ServerCore.vcxproj.filters  ServerLib.vcxproj  ServerLib.vcxproj.filters  Session.cpp  (+7 more)
Server/ServerCore/Buffer/: RecvBuffer.cpp  SendBuffer.cpp
Server/ServerCore/Common/: CoreMacro.h  CorePch.h  Session.h  concurrentqueue.h
Server/ServerCore/Main/: CoreMacro.h  CorePch.cpp  CorePch.h  CoreTLS.cpp  CoreTLS.h  Singleton.h  Types.h  pch.cpp  pch.h
Server/ServerCore/Network/: Listener.cpp  Listener.h  NetAddress.cpp  NetAddress.h  NetCore.cpp  NetCore.h  NetEvent.cpp  NetEvent.h  NetObject.cpp  NetObject.h  Service.cpp  Service.h  Session.cpp  Session.h  SocketUtils.cpp  SocketUtils.h
Server/ServerCore/Platform/Linux/: EpollCore.cpp  EpollCore.h  EpollEvent.cpp  EpollEvent.h  Listener.cpp  Listener_Linux.cpp  Listener_Linux.h  NetCore.cpp  Session.cpp
Server/ServerCore/Platform/Windows/: IocpCore.cpp  IocpCore.h  IocpEvent.h  Listener.cpp  Listener_Win.cpp  Listener_Win.h  NetCore.cpp  Session.cpp  Session_Win.cpp  Session_Win.h
Server/ServerCore/Thread/: JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h
Server/ServerCore/Util/: LogManager.cpp  LogManager.h
Server/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
Server/build_linux/GameServer/: Makefile  cmake_install.cmake
Server/build_linux/ServerCore/: Makefile  cmake_install.cmake
TestClient/: Program.cs
